--- a/player-card/package.json
+++ b/player-card/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
-    "reka-ui": "^2.5.0",
+    "reka-ui": "^2.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
